prusti-tests/tests/counterexamples/verify-fail/no-annotations/panic.rs
/* COUNTEREXAMPLE :
    fn main():
        empty
*/


fn main() {
    panic!();  //~ ERROR panic!(..) statement might be reachable
}
